4.x: Fix testcontainers logging (#11181)
* 4.x: Fix testcontainers logging

- Replace usage of SL4J with JUL
- Fine tune testcontainers log levels

Replace the Oracle Database docker image:
- Use container-registry.oracle.com/database/free:latest-lite instead of container-registry.oracle.com/database/express
- Improves the execution times significantly

* Fix typo

* Remove duplicate in data/tests/eclipselink/mysql. Shorten pom names