@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 Oracle and/or its affiliates.
+ * Copyright (c) 2024, 2026 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,16 +36,17 @@ import static org.hamcrest.Matchers.is;
 @Testcontainers(disabledWithoutDocker = true)
 abstract class Mp2PackagingTestIT {
 
-    private static final DockerImageName image = DockerImageName.parse("container-registry.oracle.com/database/express");
+    private static final DockerImageName IMAGE = DockerImageName.parse("container-registry.oracle.com/database/free:latest-lite");
 
     @Container
-    static final GenericContainer<?> CONTAINER = new GenericContainer<>(image)
+    static final GenericContainer<?> CONTAINER = new GenericContainer<>(IMAGE)
             .withEnv("ORACLE_PWD", "oracle123")
             .withCopyFileToContainer(
                     MountableFile.forClasspathResource("/init.sql"),
                     "/opt/oracle/scripts/startup/init.sql")
             .withExposedPorts(1521)
-            .waitingFor(Wait.forHealthcheck()
+            .withStartupAttempts(3)
+            .waitingFor(Wait.forLogMessage(".*DATABASE IS READY TO USE.*", 1)
                     .withStartupTimeout(Duration.ofMinutes(5)));
 
     abstract ExecMode execMode();
@@ -67,7 +68,7 @@ abstract class Mp2PackagingTestIT {
                 .start();
     }
 
-    private String jdbcUrl() {
-        return String.format("jdbc:oracle:thin:@localhost:%d/XE", CONTAINER.getMappedPort(1521));
+    private static String jdbcUrl() {
+        return "jdbc:oracle:thin:@localhost:%s/FREE".formatted(CONTAINER.getMappedPort(1521));
     }
 }
